[package]
name = "identityaccess"
version = "0.1.0"
authors = ["rhuffus <rafahernandeznovillo@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "1.0.7"
chrono = { version = "0.4.9", features = ["serde"] }
diesel = { version = "1.4.2", features = ["postgres", "uuidv07", "chrono", "r2d2"] }
dotenv = "0.14.1"
env_logger = "0.6.2"
futures = "0.1.29"
juniper = {version = "0.13.1", features = ["uuid"]}
log = "0.4.8"
serde = "1.0.100"
serde_json = "1.0.40"
uuid = { version = "0.7.4", features = ["serde", "v4"] }
